<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.CreditsView">

    <LinearLayout
        android:id="@+id/EasterLayout"
        android:layout_width="353dp"
        android:layout_height="76dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeveloperLayout"
        app:layout_constraintVertical_bias="0.348">

        <TextView
            android:id="@+id/Heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="Отдельное спасибо:"
            android:textColor="#FFEB3B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Алёне Чеботарёвой за иконку приложения и помощь с разработкой  🐹"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/DeveloperLayout"
        android:layout_width="345dp"
        android:layout_height="98dp"
        android:layout_marginBottom="188dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.15">

        <TextView
            android:id="@+id/Heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="Сведения о разработчике:"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DeveloperHead"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:text="Разработчик"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Developer"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:gravity="center"
                android:text="@string/Developer"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/YearHead"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:text="Год разработки"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Year"
                android:layout_width="112dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:gravity="center"
                android:text="@string/Year"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/font"
        android:text="О приложении"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginBottom="360dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text=" Спецификации:"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AppVersionHead"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:text="Версия Приложения"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AppVersion"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:gravity="center"
                android:text="@string/app_version_credits"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CodeVersionHead"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:text="Версия кода"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CodeVersion"
                android:layout_width="112dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/applefont"
                android:gravity="center"
                android:text="@string/CodeVersion"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MinAPI_head"
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/applefont"
                android:text="Минимальная API (для Android)"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MinAPI"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:fontFamily="@font/applefont"
                android:gravity="center"
                android:text="@string/minAndroidSDK"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:text="Иконки действий в приложении взяты с ресурса www.flaticon.com "
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/EasterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeveloperLayout"
        app:layout_constraintVertical_bias="0.411" />

    <ImageButton
        android:id="@+id/EasterButton"
        android:layout_width="112dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EasterLayout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/itsfix" />

</androidx.constraintlayout.widget.ConstraintLayout>